# ex_lancedb

./: .formatter.exs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mix.exs  usage-rules.md  usage_rules.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  dependency-review.yml  dependency-submission.yml  precompiled_nifs.yml  scorecards.yml
config/: config.exs
docs/specs/ex-lancedb-v0-1/: core-flows.md  epic-brief.md  tech-plan.md  tickets.md
documentation/cheatsheets/: schema-dsl.md
documentation/how-to/: native-build-and-precompiled.md  run-filtered-vector-search.md
documentation/reference/: architecture.md  error-contract.md  public-api.md
documentation/tutorials/: getting-started.md
lib/: ex_lance_db.ex  ex_lancedb.ex
lib/ex_lance_db/: application.ex  connection.ex  connection_supervisor.ex  error.ex  nif.ex  schema.ex  table.ex
lib/mix/tasks/: ex_lancedb.gen.livebook.ex  ex_lancedb.new_schema.ex
livebooks/: quickstart.livemd
native/ex_lancedb_nif/: Cargo.toml
native/ex_lancedb_nif/src/: lib.rs
scripts/release/: README.md  sync_checksum_from_release.sh
test/: ex_lance_db_integration_test.exs  ex_lancedb_test.exs
test/mix/tasks/: ex_lancedb.gen.livebook_test.exs  ex_lancedb.new_schema_test.exs
test/support/: fixture_data.ex
usage-rules/: errors.md  livebook.md  nif-build.md  operations.md  quickstart.md  schema.md
