[package]
name = "ex_lancedb_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "ex_lancedb_nif"
crate-type = ["cdylib"]

[dependencies]
arrow-array = "57.2"
arrow-schema = "57.2"
futures = "0.3"
lancedb = "0.26.2"
rustler = "0.37.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
